--- a/CompareTXT/CompareTXT.csproj
+++ b/CompareTXT/CompareTXT.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CompuMaster.Text.Diff" Version="2021.1.28.100" />
+  </ItemGroup>
+
 </Project>
